stoat/src/snapshots/stoat__test_harness__search_match_highlight.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: enter
focused: #1 of 1
mode: normal
size: 40x10
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;229;192;123mabc[0m[38;2;250;250;250m[48;2;40;44;52m def [0m[38;2;187;189;191m[48;2;62;68;82mab[0m[38;2;40;44;52m[48;2;229;192;123mc[0m[38;2;250;250;250m[48;2;40;44;52m xyz [0m[38;2;40;44;52m[48;2;229;192;123mabc[0m[38;2;250;250;250m[48;2;40;44;52m                 [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m search-test buf.txt [0m[38;2;99;109;131m[48;2;99;109;131m────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:11 [0m
