stoat/src/snapshots/stoat__test_harness__select_mode_vertical_cursor.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: j
focused: #1 of 1
mode: select
size: 30x5
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mab[0m[38;2;250;250;250m[48;2;62;68;82mcdef[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;62;68;82mgh[0m[38;2;250;250;250m[48;2;40;44;52mijkl                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;40;44;52m[48;2;229;192;123m SEL [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) /test/s.txt [0m[38;2;99;109;131m[48;2;99;109;131m──[0m
